debugging index.html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
     </div>
     <div class="row heading">
       <div class="span 12">
+	<h1>Bitsarter Title</h1>
+      </div>
+    </div>
+    <div class="row subheading">
+      <div class="span12">
 	<p class="lead">This is my first bitstarter project.</p>
       </div>
     </div>
